# qqokx

./: .editorconfig  .env.example  .gitattributes  .gitignore  BTCUSDT_EMA_SHORT_RESEARCH_ALIGNMENT.md  BTC研究工作台开发记录.md  README.md  arbitrage_ui.recovered.py  btc_analysis_alignment_checklist_v1.md  main.py  pyproject.toml  requirements.txt  roll_terminal_qt_README.md  roll_terminal_qt_requirements.txt  run_roll_terminal_qt.py  start_roll_terminal_qt.bat  交易员晨会解读.md  发版协作约定.md  发版待打包清单.md  回测要求标准_v1.json  回测要求标准_v1.md  回测规则文件.MD  多周期策略开发对齐清单.md  市场时间结构统计研究项目_归档说明.md  版本开发日志_v0.6.11.md  版本开发日志_v0.6.12.md  线程工作流模板.md  自动通道功能入口与交互流程_v1.md  自适应均线策略开发日志.md  软件开发指南.md
btc_ema_short_research/: README.md  config.yaml  requirements.txt
docs/: 专业套利终端_套利开仓联调清单.md  回测K线图主窗改版方案_待审核.md  回测参数区紧凑化方案_待审核.html  回测快照编号歧义优化方案_待审核.md  回测核心功能逻辑复用说明.md  现货套利独立极速化方案_待审核.md  盘口发现速度优化方案_待审核.md
export/: __init__.py  btc_usdt_swap_4h_full.csv  csv_exporter.py  empirical_report.py  research_brief.py
okx_quant/: __init__.py  analysis_email_validation.py  app_meta.py  app_paths.py  arbitrage_fast_app.py  arbitrage_ui.py  arbitrage_ui.py.brokenbak  arbitrage_ui.py.corrupted_backup  auto_channel_preview.py  auto_channel_storage.py  backtest.py  backtest_audit.py  backtest_export.py  backtest_strategy_pool.py  backtest_ui.py  btc_market_analysis_ui.py  btc_market_analyzer.py  btc_market_replay.py  btc_research_workbench_ui.py  candle_cache.py  candle_cache_verify.py  candle_continuity.py  candle_patterns.py  candle_store.py  daily_filters.py  deribit_client.py  deribit_volatility_monitor.py  deribit_volatility_monitor_ui.py  deribit_volatility_ui.py  duration_input.py  engine.py  (+71 more)
(+507 files in other folders)
