[project]
name = "okx-quant-mvp"
version = "0.5.42"
description = "Desktop MVP for OKX EMA signal trading with ATR-based TP/SL"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["okx_quant*", "research*", "stats*", "export*", "utils*"]
exclude = ["tests*", "tests_artifacts*"]
